# opengl_tutorial

./: CMakeLists.txt  CMakeUserPresets.json
include/: camera.hpp  camera_ext.hpp  shader.hpp  window.hpp
part_1/: CMakeLists.txt  main.cpp
part_2/: CMakeLists.txt  main.cpp  triangle.fs  triangle.vs
part_3/: CMakeLists.txt  main.cpp  triangle.fs
part_4/: CMakeLists.txt  main.cpp
part_5/: CMakeLists.txt  cube.fs  cube.vs  cube_def.fs  cube_directional.fs  cube_light.fs  cube_point.fs  cube_spot.fs  main.cpp
src/: shader.cpp  window.cpp
